Debug tests hanging on CI
Temporarily remove random ordering of tests

It is unclear why this is hanging when it did not used to, but
is presumably related to a subtle thread/process safety
issue (perhaps in pynbody) since the hangs occur during 
test_pynbody_server

--- a/.github/workflows/build-test.yaml
+++ b/.github/workflows/build-test.yaml
@@ -76,4 +76,4 @@ jobs:
         sudo /etc/init.d/mysql start
     - name: Run all tests
       working-directory: tests
-      run: python -m pytest -v --random-order-seed=11
+      run: python -m pytest -v 
