--- a/.github/workflows/build-test.yaml
+++ b/.github/workflows/build-test.yaml
@@ -17,9 +17,14 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest]
-        python-version: ["3.11", "3.12", "3.13"]
+        python-version: ["3.11", "3.12", "3.13", "3.14"]
         sqlalchemy-version: ["2.0"]
-        numpy-version: ["2.0", "2.3"]
+        numpy-version: [ "2.0.2", "2.3.3" ]
+        exclude:
+          - python-version: "3.14"
+            numpy-version: "2.0.2"
+          - python-version: "3.13"
+            numpy-version: "2.0.2"
         TANGOS_TESTING_DB_BACKEND: [sqlite, mysql+pymysql, postgresql+psycopg2]
 
     runs-on: ${{ matrix.os }}
